--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_ENV=development
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/desafio
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/desafio"
+# JWT_SECRET="63410c59-c7cd-4f63-9a01-0bc820bcf278  
